# Pedalboard3

./: .clang-format  .clangd  .geminiignore  .gitignore  ARCHITECTURE.md  BUGFIX_ROADMAP.md  BUNDLED_PRODUCTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  ChangeLog.txt  HANDOFF_BLACKLIST_UI.md  P0_GIG_SPEED_FEATURES.md  PHASED_PLAN.md  Pedalboard3 Patch File(6).pd  ROADMAP.md  STATE_OF_PROJECT.md  THIRD_PARTY_LICENSES.md  ToDo.txt  UI_POLISH_2_WEEK_HANDOFF.md  UI_POLISH_ROADMAP_UPGRADE.md  UI_POLISH_TASK_BOARD.md  build_debug.txt  build_output2.txt  build_project.ps1  build_warnings.txt  configure_cmake.ps1  crash_log.txt  readme.md
.agent/workflows/: changelog.md  commit.md  new-project.md  rebuild.md
docs/archive/: PHASED_PLAN_ARCHIVE.md
documentation/: built-in-tools.htm  index.htm  keyboard-shortcuts.htm  midi-mapping.htm  osc-control.htm  quick-start.htm  streaming-setup.htm  subgraphs.htm  troubleshooting.htm
src/: AboutPage.cpp  AboutPage.h  App.cpp  App.h  ApplicationMappingsEditor.cpp  ApplicationMappingsEditor.h  AudioRecorderControl.cpp  AudioRecorderControl.h  AudioRecorderEditor.cpp  AudioSingletons.cpp  AudioSingletons.h  BlacklistWindow.cpp  BlacklistWindow.h  BranchesLAF.cpp  BranchesLAF.h  BypassableInstance.cpp  BypassableInstance.h  ChannelRoutingProcessors.cpp  ChannelRoutingProcessors.h  ColourScheme.cpp  ColourScheme.h  ColourSchemeEditor.cpp  ColourSchemeEditor.h  CrashProtection.cpp  CrashProtection.h  CrossfadeMixer.cpp  CrossfadeMixer.h  DawMixerProcessor.cpp  DawMixerProcessor.h  DawSplitterProcessor.cpp  DawSplitterProcessor.h  DeviceMeterTap.cpp  DeviceMeterTap.h  FilePlayerControl.cpp  FilePlayerControl.h  FilePlayerEditor.cpp  FilePlayerProcessor.cpp  FilterGraph.cpp  FilterGraph.h  FontManager.cpp  (+175 more)
src/NiallsOSCLib/: OSCTimeTag.cpp
src/scanner/: PluginScannerMain.cpp
tests/: CMakeLists.txt  audio_component_test.cpp  audio_thread_stress_test.cpp  filtergraph_test.cpp  font_manager_test.cpp  integration_test.cpp  master_bus_test.cpp  midi_mapping_test.cpp  mixer_splitter_test.cpp  nam_processor_test.cpp  patch_switch_test.cpp  plugin_pool_manager_test.cpp  protection_test.cpp  smoke_test.cpp  subgraph_test.cpp  tone_generator_test.cpp  vst3_loading_test.cpp
